--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,11 @@
 layout: default
 ---
 <div class="post">
+  {% comment %}
   <header class="post-header">
     <h1 class="h2">{{ page.title }}</h1>
   </header>
+  {% endcomment %}
   <article class="post-content">
   {{ content }}
   </article>
