--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -12,7 +12,6 @@
     {% if site.stackoverflow_id %}
       <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/{{ site.stackoverflow_id }}"></a>
     {% endif %}
-    <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}"></a>
     {% if site.twitter_username %}
       <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a>
     {% endif %}
@@ -25,9 +24,13 @@
     {% if site.google_plus_id %}
       <a class="fa fa-google-plus" href="https://plus.google.com/{{ site.google_plus_id }}/posts"></a>
     {% endif %}
+
+    {% comment %}
     {% if site.email %}
       <a class="fa fa-envelope" href="mailto:{{ site.email }}"></a>
     {% endif %}
+    {% endcomment %}
+
     {% if site.linkedin_username %}
       <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a>
     {% endif %}
@@ -43,6 +46,7 @@
     {% if site.vk_id %}
       <a class="fa fa-vk" href="https://vk.com/{{ site.vk_id }}"></a>
     {% endif %}
+    <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}"></a>
   </div>
   <div class="right">
     {% if site.bitcoin_url %}
