Update domain name

--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,7 +1,7 @@
 <div class="py2 post-footer">
   <img src="{{ site.baseurl }}/images/me.jpeg" alt="Will Olson" class="avatar" />
   <p>
-    <a href="https://thinkolson.com">Will Olson</a> is a web developer solving the online problems of small businesses.
+    <a href="https://willolson.me">Will Olson</a> is a web developer solving the online problems of small businesses.
     When he's not writing code and building things, he's probably watching <a href="https://twitter.com/theofficenbc">The Office</a>.
   </p>
   <p>
