Add blog post on serverless project ideas

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Coded with &lt;3 by <a href="https://willolson.io">Will Olson</a> (<a href="https://twitter.com/thinkolson">@thinkolson</a>).
+      Coded with &lt;3 by <a href="https://willolson.io">Will Olson</a> (<a href="https://twitter.com/AKitchenNerd">@AKitchenNerd</a>).
     </small>
   </div>
 </footer>
