--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,10 +1,10 @@
 <div class="py2 post-footer">
-  <img src="{{ site.baseurl }}/images/me.jpeg" alt="Will Olson" class="avatar" />
+  <img src="{{ site.baseurl }}/images/me.png" alt="Will Olson" class="avatar" />
   <p>
     <a href="https://willolson.io">Will Olson</a> is a web developer solving the online problems of small businesses.
     When he's not writing code and building things, he's probably watching <a href="https://twitter.com/theofficenbc">The Office</a>.
   </p>
   <p>
-    Follow him on <a href="https://twitter.com/thinkolson">Twitter</a>.
+    Follow him on <a href="https://twitter.com/AKitchenNerd">Twitter</a>.
   </p>
 </div>
